# torch_dpmm

./: .gitignore  LICENSE  README.md  __init__.py  first_example.ipynb  pyproject.toml  test_functions.py
examples/: first_example.ipynb  plot_utils.py
models/: __init__.py  functions.py  modules.py
models/__bnpy_test__/: __init__.py  bags.py  dpModel.py  guassModel.py  test.py
notebooks/: first_example.ipynb
notebooks/plot_utils/: __init__.py  misc.py
prob_utils/: constraints.py  kl_div.py  misc.py
prob_utils/conjugate_priors/: __base__.py  __init__.py  continuous.py  discrete.py
prob_utils/exp_distributions/: __base__.py  __init__.py  discrete.py  mv_normal.py
test/: test_DPMM_functions.py  test_conj_priors.py  test_functions.py  test_prob_utils.py
test/utils/bnpy_test/: dpModel.py
test_utils/__bnpy_test__/: hmodel.py  test.py
tests/: test_DPMM_functions.py  test_conj_priors.py  test_exp_distributions.py  test_prob_utils.py
tests/utils/: misc.py
tests/utils/bnpy_test/: guassModel.py  test.py
torch_dpmm/: __init__.py  debug_mode.py
torch_dpmm/bayesian_distributions/: base.py  discrete.py  mv_normal.py
torch_dpmm/exp_family/: __init__.py  base.py  discrete.py  mv_normal.py
torch_dpmm/models/: __init__.py  base.py  gaussian.py
torch_dpmm/prob_tools/: constants.py  mat_utils.py  utils.py
torch_dpmm/prob_tools/bayesian/: __init__.py  base.py  discrete.py  mv_normal.py
torch_dpmm/prob_tools/conjugate_priors/: __init__.py  base.py  (+2 more)
torch_dpmm/prob_utils/: misc.py
torch_dpmm/utils/: constants.py  constraints.py  mat_utils.py  misc.py
(+12 files in other folders)
