[project]
name = "torch_dpmm"
version = "0.0.4"
authors = [
  { name="Daniele Castellana", email="danielecastellana22@gmail.com" },
]
description = "A torch implementation of DPMM"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'torch~=2.0.1',
    'numpy~=1.26.0',
    'scipy~=1.11.1',
    'scikit-learn~=1.3.2',
]

[project.urls]
Homepage = "https://github.com/danielecastellana22/torch_dp"
